--- a/Preprocessing/Word_embeddings_preprocessing.ipynb
+++ b/Preprocessing/Word_embeddings_preprocessing.ipynb
@@ -14,6 +14,7 @@
     "\n",
     "# the steps are for the google dataset, available at (https://code.google.com/archive/p/word2vec/).\n",
     "\n",
+    "# download the dataset from the link above and save it in the same directory as this file.\n",
     "embeddings = KeyedVectors.load_word2vec_format('./GoogleNews-vectors-negative300.bin', binary = True)\n",
     "f = open('capitals.txt', 'r').read()\n",
     "set_words = set(nltk.word_tokenize(f))\n",
